# aacgmv2-rs

./: Cargo.toml  build.rs
.cargo/: config.toml
src/: lib.rs  wrapper.h
