[package]
name = "aacgmv2-rs"
version = "0.1.0"
edition = "2021"
links = "aacgmv2"

[build-dependencies]
cc = "1.0.83"
bindgen = "0.69.1"
openssl = { version = "0.10.71", features = ["vendored"]}
reqwest = { version = "0.11.22", features = ["blocking"]}
tar = "0.4.40"

[dev-dependencies]
approx = "0.5.1"
